# STM32_CMAKE_Demo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  STM32_CMAKE_Demo.sln  STM32_CMAKE_Demo.vcxproj
Hardwear/WiFi/: wifi.c
User/inc/: main.h  usart1.h
User/src/: main.c  tim2.c  usart1.c  usart2.c
